--- a/CHANGELOG.mdx
+++ b/CHANGELOG.mdx
@@ -6,6 +6,13 @@ title: Rasa For Botfront Changelog
 
 <!-- TOWNCRIER -->
 
+## [1.10.16-bf.1] - 2020-10-27
+
+## Improvements
+
+- [#32](https://github.com/botfront/rasa-for-botfront/pull/32): Move graphql slot interpolation to Rasa.
+- [#29](https://github.com/botfront/rasa-for-botfront/pull/29): Add support for the augmentation factor in the train route.
+
 ## [1.10.10-bf.4] - 2020-09-18
 
 ### Features
