--- a/CHANGELOG.mdx
+++ b/CHANGELOG.mdx
@@ -6,6 +6,16 @@ title: Rasa For Botfront Changelog
 
 <!-- TOWNCRIER -->
 
+## [1.10.16-bf.2] - 2020-11-12
+
+### Bugfixes
+
+- [#34](https://github.com/botfront/rasa-for-botfront/pull/34): Use "from_text" extraction when none specified.
+
+### Features
+
+- [#33](https://github.com/botfront/rasa-for-botfront/pull/33): Allow setting a slot at the end of a form.
+
 ## [1.10.16-bf.1] - 2020-10-27
 
 ## Improvements
