--- a/CHANGELOG.mdx
+++ b/CHANGELOG.mdx
@@ -1,6 +1,6 @@
 ---
 id: changelog
-sidebar_label: Rasa Open Source Change Log
+sidebar_label: Rasa For Botfront Changelog
 title: Rasa For Botfront Changelog
 ---
 
@@ -15,6 +15,34 @@ You can find more information on how to add a new change log entry at
 https://github.com/RasaHQ/rasa/tree/master/changelog/ . -->
 
 <!-- TOWNCRIER -->
+
+## [2.1.3-bf.3] - 2020-12-16
+
+## Bugfixes
+
+- [b1ad997](https://github.com/botfront/rasa-for-botfront/commit/b1ad99753eff8dd914c5e1d0627f5aa1e5873c02): Temporarily fix bf forms by skipping Rasa form validation.
+
+## [2.1.3-bf.2] - 2020-12-15
+
+## Bugfixes
+
+- [6369098](https://github.com/botfront/rasa-for-botfront/commit/636909871736b3c3685143764f6a7f86bc1a1fd1): Fix bug where non-structured NLU data (e.g. synonyms) caused a crash.
+
+## Improvements
+
+- [a241685](https://github.com/botfront/rasa-for-botfront/commit/a2416856e5eeb7eca25c4f03aaa570cb52e465db): NLU data spec/styling: language as intent-level metadata, rest as example level.
+
+## [2.1.3-bf.1] - 2020-12-14
+
+## Misc
+
+- [c694727](https://github.com/botfront/rasa-for-botfront/commit/c694727bd4acca252f0716a5d58b8a9a1c2bdaf9): Rasa 2.0!
+
+## [1.10.16-bf.3] - 2020-11-25
+
+## Bugfixes
+
+- [#35](https://github.com/botfront/rasa-for-botfront/pull/35): Fix form submission, where exiting form with no SlotSet instruction caused a TypeError.
 
 ## [1.10.16-bf.2] - 2020-11-12
 
