--- a/CHANGELOG.mdx
+++ b/CHANGELOG.mdx
@@ -16,31 +16,45 @@ https://github.com/RasaHQ/rasa/tree/master/changelog/ . -->
 
 <!-- TOWNCRIER -->
 
+## [2.1.3-bf.4] - 2020-12-23
+
+### Features
+
+- [#36](https://github.com/botfront/rasa-for-botfront/pull/36): Add an input channel to which Botfront can POST chatbot regression tests.
+
+### Improvements
+
+- [#37](https://github.com/botfront/rasa-for-botfront/pull/37): Preparse nlu yaml to avoid ruamel performance issue.
+
+### Bugfixes
+
+- [78e397a](https://github.com/botfront/rasa-for-botfront/commit/78e397ad00ff7c25c3a8ea6fd21dc0cd15b90bcf): Train when old model is corrupted.
+
 ## [2.1.3-bf.3] - 2020-12-16
 
-## Bugfixes
+### Bugfixes
 
 - [b1ad997](https://github.com/botfront/rasa-for-botfront/commit/b1ad99753eff8dd914c5e1d0627f5aa1e5873c02): Temporarily fix bf forms by skipping Rasa form validation.
 
 ## [2.1.3-bf.2] - 2020-12-15
 
-## Bugfixes
+### Bugfixes
 
 - [6369098](https://github.com/botfront/rasa-for-botfront/commit/636909871736b3c3685143764f6a7f86bc1a1fd1): Fix bug where non-structured NLU data (e.g. synonyms) caused a crash.
 
-## Improvements
+### Improvements
 
 - [a241685](https://github.com/botfront/rasa-for-botfront/commit/a2416856e5eeb7eca25c4f03aaa570cb52e465db): NLU data spec/styling: language as intent-level metadata, rest as example level.
 
 ## [2.1.3-bf.1] - 2020-12-14
 
-## Misc
+### Misc
 
 - [c694727](https://github.com/botfront/rasa-for-botfront/commit/c694727bd4acca252f0716a5d58b8a9a1c2bdaf9): Rasa 2.0!
 
 ## [1.10.16-bf.3] - 2020-11-25
 
-## Bugfixes
+### Bugfixes
 
 - [#35](https://github.com/botfront/rasa-for-botfront/pull/35): Fix form submission, where exiting form with no SlotSet instruction caused a TypeError.
 
@@ -56,7 +70,7 @@ https://github.com/RasaHQ/rasa/tree/master/changelog/ . -->
 
 ## [1.10.16-bf.1] - 2020-10-27
 
-## Improvements
+### Improvements
 
 - [#32](https://github.com/botfront/rasa-for-botfront/pull/32): Move graphql slot interpolation to Rasa.
 - [#29](https://github.com/botfront/rasa-for-botfront/pull/29): Add support for the augmentation factor in the train route.
