--- a/CHANGELOG.mdx
+++ b/CHANGELOG.mdx
@@ -16,6 +16,13 @@ https://github.com/RasaHQ/rasa/tree/master/changelog/ . -->
 
 <!-- TOWNCRIER -->
 
+## [2.1.3-bf.5] - 2021-01-06
+
+### Bugfixes
+
+- [#36](https://github.com/botfront/rasa-for-botfront/pull/38): Fix regression testing of forms.
+- [8af1c75](https://github.com/botfront/rasa-for-botfront/commit/8af1c75833eca4bd18683611e480926e638c705a): Fix training of outdated models.
+
 ## [2.1.3-bf.4] - 2020-12-23
 
 ### Features
