--- a/CHANGELOG.mdx
+++ b/CHANGELOG.mdx
@@ -16,6 +16,12 @@ https://github.com/RasaHQ/rasa/tree/master/changelog/ . -->
 
 <!-- TOWNCRIER -->
 
+## [2.1.3-bf.7] - 2021-01-15
+
+### Bugfixes
+
+- [e8ee72e](https://github.com/botfront/rasa-for-botfront/commit/e8ee72e39fa0aa0815ad6407b47f06b4f5da0d49): Don't collect form results if it's a regression test run.
+
 ## [2.1.3-bf.5] - 2021-01-06
 
 ### Bugfixes
