--- a/CHANGELOG.mdx
+++ b/CHANGELOG.mdx
@@ -16,6 +16,12 @@ https://github.com/RasaHQ/rasa/tree/master/changelog/ . -->
 
 <!-- TOWNCRIER -->
 
+## [2.2.5-bf.1] - 2021-01-19
+
+### Bugfixes
+
+- [fe8d0d3](https://github.com/botfront/rasa-for-botfront/commit/fe8d0d3d6cd2328da9038c7eaa77e9be84079731): Better outdated model handling.
+
 ## [2.1.3-bf.7] - 2021-01-15
 
 ### Bugfixes
